--- a/views/about.html
+++ b/views/about.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand" href="#">WEB322 - Kristjan Punno</span>
+          <span class="navbar-brand" href="#" style="color:darkgreen">WEB322 - Kristjan Punno</span>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -44,7 +44,7 @@
       <div class="row">
         <section class="main col-md-9">
           <article>
-          <h2>About</h2>
+          <h2 style="color:rgb(42, 126, 79)">About</h2>
           <p>Hi! My name is Kristjan Punno. I'm currently enrolled in the Computer Programming & Analysis program at Seneca College.</p>
           <p>This website is a dedicated project for the WEB322 course.</p>
           </article>
