--- a/views/about.html
+++ b/views/about.html
@@ -7,7 +7,7 @@
       <!-- Latest compiled and minified Bootstrap 3.4.1 CSS -->
       
       
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> 
+      <link rel="stylesheet" href="https://bootswatch.com/3/darkly/bootstrap.min.css"> 
       <link rel="stylesheet" href="/css/main.css"> 
 
 
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand" href="#" style="color:darkgreen">WEB322 - Kristjan Punno</span>
+          <span class="navbar-brand" href="#">WEB322 - Kristjan Punno</span>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
