--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="/css/main.css"> 
 
 
-      <title>About</title>
+      <title>Kristjan Punno Blog</title>
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -42,19 +42,7 @@
       </div><!-- /.container-fluid -->
     </nav>
     <div class="container" style="padding-top:60px">
-      <div class="row">
-        <section class="main col-md-9">
-          <article>
-          <h2 style="color:rgb(42, 126, 79)">About</h2>
-          <p>Hi! My name is Kristjan Punno. I'm currently enrolled in the Computer Programming & Analysis program at Seneca College.</p>
-          <p>This website is a dedicated project for the WEB322 course.</p>
-          </article>
-        </section>
-        <aside class="col-md-3">
-          <h2>Coming Soon</h2>
-          <p>Under construction...</p>
-        </aside>
-      </div>
+      {{{body}}}
     </div>
 
     <!-- Latest compiled and minified jQuery 3.6.0 JavaScript -->
