--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -31,12 +31,16 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="/blog">Blog</a></li>
-            <li class="active"><a href="/about">About</a></li>
+            <!--  <li class="active"><a href="/about">About</a></li>  -->
+            {{#navLink "/about"}}About{{/navLink}}
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/posts">Posts</a></li>
-            <li><a href="/categories">Categories</a></li>
-            <li><a href="/posts/add">Add Post</a></li>       
+            <!-- <li><a href="/posts">Posts</a></li> -->
+            {{#navLink "/posts"}}Posts{{/navLink}}
+            <!-- <li><a href="/categories">Categories</a></li> -->
+            {{#navLink "/categories"}}Categories{{/navLink}}
+            <!-- <li><a href="/posts/add">Add Post</a></li> -->
+            {{#navLink "/posts/add"}}Add Post{{/navLink}}
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
