--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -2,13 +2,34 @@
     <div class="col-md-12">
         <h2>Posts</h2>
         <hr>
-        <table>
-            {{#each posts}} 
-            <tr>
-                <td>{{@id}}</td>
-                <td>{{title}}</td>
-            </tr>
-            {{/each}}
-        </table>
+        {{#unless posts}}
+        <div class="col-md-12 text-center">
+            <strong>{{message}}</strong>
+        </div>
+        {{/unless}}
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Post ID</th>
+                        <th>Title</th>
+                        <th>Post Date</th>
+                        <th>Category</th>
+                        <th>Published</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each posts}}
+                    <tr>
+                        <td>{{id}}</td>
+                        <td>{{title}}</td>
+                        <td>{{postDate}}</td>
+                        <td>{{category}}</td>
+                        <td>{{published}}</td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
