posts filters categories properly

--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -24,7 +24,9 @@
                         <td>{{id}}</td>
                         <td>{{title}}</td>
                         <td>{{postDate}}</td>
-                        <td>{{category}}</td>
+                        <td>
+                            <a href="/posts?category={{category}}">{{category}}</a>
+                        </td>
                         <td>{{published}}</td>
                     </tr>
                     {{/each}}
