--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,5 +1,6 @@
 <div class="row">
     <section class="main col-md-9">
+        {{#if data.post}}
         <article>
             <h2>{{data.post.title}}</h2>
             <img src={{data.post.featureImage}} alt="feature Image" style="width:100%" />
@@ -9,6 +10,7 @@
             <strong>Category: </strong>{{data.post.category}}<br />
             <strong>Last Updated: </strong>{{data.post.postDate}}
         </article>
+        {{/if}}
     </section>
     <aside class="col-md-3">
         {{#if data.posts}}
@@ -16,9 +18,9 @@
         <h4>Posts</h4>
 
         <ul class="list-group">
-            <a href="/blog/{{data.post.id}}?category={{viewingCategory}}" class="list-group-item">Post 1</a>
-            <a href="#" class="list-group-item">Post 2</a>
-            <a href="#" class="list-group-item">etc...</a>
+            {{#each data.posts}}
+            <a href="/blog/{{id}}?category={{../viewingCategory}}" class="list-group-item">{{title}}</a>
+            {{/each}}
         </ul>
         {{/if}}
 
@@ -26,9 +28,9 @@
         <h4>Categories</h4>
 
         <ul class="list-group">
-           <a href="#" class="list-group-item">Category 1</a>
-            <a href="#" class="list-group-item">Category 2</a>
-            <a href="#" class="list-group-item">etc...</a>
+            {{#each data.categories}}
+            <a href="/blog?category={{id}}" class="list-group-item">{{category}}</a>
+            {{/each}}
         </ul>
         {{/if}}
     </aside>
