--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -10,7 +10,13 @@
             <strong>Category: </strong>{{data.post.category}}<br />
             <strong>Last Updated: </strong>{{data.post.postDate}}
         </article>
+        {{else}}
+        <div class="col-md-12 text-center">
+            <h2>{{data.message}}</h2>
+            <p>Please try another Post / Category</p>
+        </div>
         {{/if}}
+        
     </section>
     <aside class="col-md-3">
         {{#if data.posts}}
