--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="/css/main.css"> 
 
 
-      <title>Kristjan Punno Blog</title>
+      <title>WEB-322 Blog</title>
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -30,7 +30,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="/blog">Blog</a></li>
+            {{#navLink "/blog"}}Blog{{/navLink}}
             {{#navLink "/about"}}About{{/navLink}}
           </ul>
           <ul class="nav navbar-nav navbar-right">
