--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -7,6 +7,7 @@
             <strong>{{message}}</strong>
         </div>
         {{/unless}}
+        {{#if posts}}
         <div class="table-responsive">
             <table class="table">
                 <thead>
@@ -33,5 +34,6 @@
                 </tbody>
             </table>
         </div>
+        {{/if}}
     </div>
 </div>
