fixed categories route

--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -18,8 +18,8 @@
                 <tbody>
                     {{#each categories}}
                     <tr>
-                        <td>{{id}}</td>
-                        <td>{{category}}</td>
+                        <td><a href="/posts?category={{id}}">{{id}}</a></td>
+                        <td><a href="/posts?category={{id}}">{{category}}</a></td>
                     </tr>
                     {{/each}}
                 </tbody>
