--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -1,6 +1,9 @@
 <div class="row">
     <div class="col-md-12">
-        <h2>Posts</h2>
+        <h2>
+            Posts
+            <a href="/posts/add" class="btn btn-success pull-right">Add Post</a>
+        </h2>
         <hr>
         {{#unless posts}}
         <div class="col-md-12 text-center">
@@ -24,7 +27,7 @@
                     <tr>
                         <td>{{id}}</td>
                         <td>{{title}}</td>
-                        <td>{{postDate}}</td>
+                        <td>{{#formatDate postDate}}{{/formatDate}}</td>
                         <td>
                             <a href="/posts?category={{category}}">{{category}}</a>
                         </td>
