--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,7 +1,8 @@
 <div class="row">
   <section class="main col-md-9">
     <article>
-      <h2 style="color:rgb(42, 126, 79)">About</h2>
+      <h2 >About</h2>
+      <hr>
       <p>Hi! My name is Kristjan Punno. I'm currently enrolled in the Computer Programming & Analysis program at
         Seneca College.</p>
       <p>This website is a dedicated project for the WEB322 course.</p>
