--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -23,6 +23,7 @@
                     <tr>
                         <td><a href="/posts?category={{id}}">{{id}}</a></td>
                         <td><a href="/posts?category={{id}}">{{category}}</a></td>
+                        <td><a class="red-button" style="text-decoration:none;" href="/categories/delete/{{id}}">Remove</a></td>
                     </tr>
                     {{/each}}
                 </tbody>
