--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,12 @@
+@keyframes remove-anim {
+    from {
+        background-color: #ce2029;
+    }
+    to {
+        background-color:rgb(255, 0, 47);
+    }
+}
+
 #F04-container {
     padding-top: 10%;
     text-align: center;
@@ -10,3 +19,31 @@
 td {
     color:rgb(224, 200, 169);
 }
+
+input {
+    border-radius: 8px;
+}
+
+.full-tbox {
+    width: 100%;
+    height: 2em;
+}
+
+.red-button {
+    border-style:solid;
+    border-color:#bb1a22;
+    border-width: 3px;
+    padding: 6px;
+    background-color: #ce2029;
+    border-radius: 5px;
+    color: white;
+}
+
+.red-button:hover {
+    color:white;
+    animation-name: remove-anim;
+    animation-duration: 200ms;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+
