--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -32,6 +32,7 @@
                             <a href="/posts?category={{category}}">{{category}}</a>
                         </td>
                         <td>{{published}}</td>
+                        <td><a class="red-button" style="text-decoration:none;" href="/posts/delete/{{id}}">Remove</a></td>
                     </tr>
                     {{/each}}
                 </tbody>
