--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,7 +29,7 @@ input {
     height: 2em;
 }
 
-.red-button {
+.red-button, .red-button:visited {
     border-style:solid;
     border-color:#bb1a22;
     border-width: 3px;
@@ -45,5 +45,6 @@ input {
     animation-duration: 200ms;
     animation-direction: alternate;
     animation-iteration-count: infinite;
+    
 }
 
