--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,6 +27,14 @@ input {
 .full-tbox {
     width: 100%;
     height: 2em;
+    margin-bottom: 8px;
+    margin-top: 8px;
+    padding: 12px;
+}
+
+.submit {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .red-button, .red-button:visited {
