fixed login errors / new views

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -37,7 +37,7 @@
           <form class="navbar-form navbar-right">
             <div class="dropdown">
               <button class="btn btn-primary dropdown-toggle" type="button" id="userMenu" data-toggle="dropdown">
-                <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;{{session.user.userName}}&nbsp;&nbsp;<span
+                <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;{{session.user.username}}&nbsp;&nbsp;<span
                   class="caret"></span>
               </button>
               <ul class="dropdown-menu" aria-labelledby="userMenu">
