--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="form-group">
-          <input class="full-tbox" type="text" name="username" id="username" placeholder="Username" size="40" autofocus required>
+          <input class="full-tbox" type="text" name="username" id="username" placeholder="Username" size="40" required>
           <input class="full-tbox" type="password" name="password" id="password" placeholder="Password" size="40" required>
           <hr>
           <input type="submit" class="btn btn-primary pull-right" value="Login"><br><br><br>
