updated register.hbs display

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="/css/main.css"> 
 
 
-      <title>WEB-322 Blog</title>
+      <title>Kristjan Punno Blog</title>
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
